--- a/Loh Chun Fai - 19ACB01242.ipynb
+++ b/Loh Chun Fai - 19ACB01242.ipynb
@@ -3,16 +3,96 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Weekly activity\n",
+    "# Setup"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "# Python 3.7 is required\n",
+    "assert sys.version_info >= (3,7)\n",
+    "\n",
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Make sure that optimization is enabled\n",
+    "if not cv.useOptimized():\n",
+    "    cv.setUseOptimized(True)\n",
+    "\n",
+    "cv.useOptimized()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "1. Write a program to segment the boat and the people on it from the background. Follow the instruction below:\n",
     "    - Use 'boat.jpg' as input.\n",
     "    - Apply Otsu thresholding.\n",
-    "    - Draw bounding box to identify the region where the boat and people are located.\n",
+    "    - Draw bounding box to identify the region where the boat and people are located."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "img = cv.imread('boat.jpg', 0)   # 0 means grayscale\n",
     "\n",
+    "# Otsu's threshold\n",
+    "ret, th = cv.threshold(img, 25, 255, cv.THRESH_BINARY+cv.THRESH_OTSU)\n",
+    "pt1 = (300, 350)\n",
+    "pt2 = (680, 480)\n",
+    "cv.rectangle(th, pt1, pt2, (0, 0, 255), 3, cv.LINE_AA)\n",
+    "\n",
+    "res = cv.cvtColor(th, cv.COLOR_GRAY2BGR)\n",
+    "cv.imshow(\"Otsu's Thresholding\", th)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "2. Write a program to visualize the effect of size of structuring element on the morphological transformation (e.g. erosion, dilation, opening, and closing).\n",
     "    - Load the 'leaf.jfif' and perform thresholding to segment the leaf from the background.\n",
-    "    - Create a GUI containing trackbar to control the size of structuring element and display the resulting image on a window alongside the trackbar.\n",
-    "3. Apply the steps shown in exercise 4 to segment the porcelain from these images: \"porcelain1.jfif\" - \"porcelain5.jfif\"."
+    "    - Create a GUI containing trackbar to control the size of structuring element and display the resulting image on a window alongside the trackbar."
    ],
    "metadata": {
     "collapsed": false,
@@ -34,26 +114,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "3. Apply the steps shown in exercise 4 to segment the porcelain from these images: \"porcelain1.jfif\" - \"porcelain5.jfif\"."
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
